[package]
name = "tensor-escrow"
version = "0.1.1"
description = "Client crate for the Tensor Foundation escrow program."
repository = "https://github.com/tensor-foundation/escrow"
homepage = "https://github.com/tensor-foundation/escrow"
edition = "2021"
readme = "README.md"
license-file = "../../LICENSE"

[features]
anchor = ["anchor-lang"]
anchor-idl-build = ["anchor-lang/idl-build"]
serde = ["dep:serde", "dep:serde_with"]
test-sbf = []

[dependencies]
anchor-lang = { version = "0.29.0", optional = true }
borsh = "^0.10"
num-derive = "^0.3"
num-traits = "^0.2"
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_with = { version = "^3.0", optional = true }
solana-program = "^1.16, < 1.18"
thiserror = "^1.0"

[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = "^1.16, < 1.18"
solana-sdk = "< 1.18"
