[package]
name = "margin-program"
version = "0.0.0"
edition = "2021"
readme = "./README.md"
license-file = "../../LICENSE"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
testing = []

[dependencies]
anchor-lang = { version="0.29.0", features=["init-if-needed"] }
anchor-spl = { version="0.29.0", features=["default"] }
merkle_proof = { version="0.1.0", git="ssh://git@github.com/tensor-hq/tensor-common-rs.git", rev="85e9ba019516659ff891428ff517424474dc2cba" }
mpl-token-metadata = "4.0.0"
spl-math = { version="0.1.0", features=["no-entrypoint"] }
spl-token-metadata-interface = "0.2.0"
static_assertions = "1.1.0"
tensor_nft = { version="0.4.0", git="ssh://git@github.com/tensor-hq/tensor-common-rs.git", rev="85e9ba019516659ff891428ff517424474dc2cba" }
tensor_whitelist = { package="whitelist-program",  git="ssh://git@github.com/tensor-foundation/whitelist.git", features=["cpi"] }
vipers = { version="2.0.6", git="ssh://git@github.com/tensor-hq/tensor-common-rs.git", rev="85e9ba019516659ff891428ff517424474dc2cba" }
