[package]
name = "tensor_bid"
version = "1.0.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tensor_bid"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
testing = []

[dependencies]
merkle_proof = { version="0.1.0", git="ssh://git@github.com/tensor-hq/tensor-common-rs.git" }
tensor_nft = { version="0.3.0", git="ssh://git@github.com/tensor-hq/tensor-common-rs.git" }
vipers = { version="2.0.6", git="ssh://git@github.com/tensor-hq/tensor-common-rs.git" }
anchor-lang = "0.26.0"
anchor-spl = { version = "0.26.0", features =  ["default"] }
mpl-token-metadata = { version="1.8.3", features = [ "no-entrypoint" ] }
mpl-token-auth-rules = "1.2.0"
spl-math = { version = "0.1.0", features = [ "no-entrypoint" ] }
tensorswap = { path = '../tensorswap', features = ["cpi"] }
static_assertions = "1.1.0"
