[package]
name = "tensor_bid"
version = "1.0.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tensor_bid"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
testing = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = { version = "0.29.0", features =  ["default"] }
merkle_proof = { version="0.1.0", git="ssh://git@github.com/tensor-hq/tensor-common-rs.git", rev="4c763592a6d70557b7dece7557acb5f721fcbd1f" }
mpl-token-metadata = "4.0.0"
spl-math = { version = "0.1.0", features = [ "no-entrypoint" ] }
static_assertions = "1.1.0"
tensor_nft = { version="0.3.0", git="ssh://git@github.com/tensor-hq/tensor-common-rs.git", rev="4c763592a6d70557b7dece7557acb5f721fcbd1f" }
tensorswap = { path = '../tensorswap', features = ["cpi"] }
vipers = { version="2.0.6", git="ssh://git@github.com/tensor-hq/tensor-common-rs.git", rev="4c763592a6d70557b7dece7557acb5f721fcbd1f" }
