[package]
name = "tensor_whitelist"
version = "0.2.1"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tensor_whitelist"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
testing = []

[dependencies]
anchor-lang = { version="0.29.0", features=["init-if-needed"] }
anchor-spl = "0.29.0"
merkle_proof = { version="0.1.0", git="ssh://git@github.com/tensor-hq/tensor-common-rs.git", rev="140605debeaf1119a6675e8c05c985a307e6d989" }
mpl-token-metadata = "4.0.0"
vipers = { version="2.0.6", git="ssh://git@github.com/tensor-hq/tensor-common-rs.git", rev="140605debeaf1119a6675e8c05c985a307e6d989" }
