[package]
name = "tensorswap"
version = "1.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tensorswap"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
testing = []

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = { version = "0.26.0", features =  ["default"] }
mpl-token-metadata = { version="1.8.1", features = [ "no-entrypoint" ] }
mpl-token-auth-rules = "1.1.0"
vipers = {path= '../../lib/vipers' }
merkle_proof = {path= '../../lib/merkle_proof' }
spl-math = { version = "0.1.0", features = [ "no-entrypoint" ] }
tensor_whitelist = { path = '../tensor_whitelist', features = ["cpi"] }
static_assertions = "1.1.0"
