[package]
name = "tensorswap"
version = "3.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tensorswap"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
testing = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = { version = "0.29.0", features =  ["default"] }
merkle_proof = { version="0.1.0", git="ssh://git@github.com/tensor-hq/tensor-common-rs.git", rev="140605debeaf1119a6675e8c05c985a307e6d989" }
mpl-token-metadata = "4.0.0"
spl-math = { version = "0.1.0", features = [ "no-entrypoint" ] }
static_assertions = "1.1.0"
tensor_nft = { version="0.3.0", git="ssh://git@github.com/tensor-hq/tensor-common-rs.git", rev="140605debeaf1119a6675e8c05c985a307e6d989" }
tensor_whitelist = { path = '../tensor_whitelist', features = ["cpi"] }
vipers = { version="2.0.6", git="ssh://git@github.com/tensor-hq/tensor-common-rs.git", rev="140605debeaf1119a6675e8c05c985a307e6d989" }
