[package]
name = "margin_withdraw_cpi"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "margin_withdraw_cpi"

[package.metadata.solana]
program-id = "6yJwyDaYK2q9gMLtRnJukEpskKsNzMAqiCRikRaP2g1F"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
solana-program = "1.16.0"
escrow-program = { version = "1.0.0-beta.1", package = "escrow-program", git = "https://github.com/tensor-foundation/escrow", features = [
    "cpi",
] }
tensor-escrow = { version = "0.1.1" }
tensor-amm = { version = "0.7.0" }
tensor-toolbox = { version = "0.4.0" }
tensor-marketplace = { version = "0.1.0" }